# anchored-leveldb

./: .gitignore  .gitmodules  Benchmark.md  Cargo.toml  Justfile  Makefile  README.md  clippy.toml
bench-impls/bench-anchored-leveldb/: Cargo.toml
bench-impls/bench-anchored-leveldb/src/: main.rs
bench-impls/bench-rusty-leveldb/: Cargo.toml
bench-impls/bench-rusty-leveldb/src/: main.rs
benchmarks/bench-iter/: Cargo.toml
benchmarks/bench-iter/src/: main.rs
benchmarks/sequential-benchmark/bench-anchored-leveldb/: Cargo.toml
crates/anchored-ldb-vfs/: Cargo.toml
crates/anchored-ldb-vfs/src/: dyn_filesystems.rs  error.rs  fs_traits.rs  lib.rs  util_traits.rs
crates/anchored-ldb-vfs/src/memory_fs/: aliases.rs  error.rs  file.rs  file_inner.rs  fs.rs  iter.rs  lockfile.rs  mod.rs  path.rs  zip_conversion.rs
crates/anchored-ldb-vfs/src/std_fs/: mod.rs  std_fs_core.rs  std_fs_either.rs  std_fs_neither.rs  std_fs_unix.rs  std_fs_windows.rs
crates/anchored-ldb-vfs/src/threadsafe_memory_fs/: error.rs  file.rs  fs.rs  lockfile.rs  mod.rs
crates/anchored-leveldb/: Cargo.toml
crates/anchored-leveldb/src/: config_constants.rs  containers.rs  corruption_handler.rs  database_files.rs  db_data.rs  db_shared_access.rs  db_writer.rs  error.rs  errors.rs  format.rs  generic_db.rs  info_logger.rs  internal_logger.rs  leveldb_generics.rs  leveldb_iter.rs  lib.rs  memtable.rs  options.rs  options_.rs  public_format.rs  read_only_leveldb.rs  read_sampling.rs  read_test.rs  snapshot.rs  sstable_trait_implementations.rs  table_cache.rs  table_caches.rs  table_file.rs  table_format.rs  utils.rs  version_edit.rs  version_utils.rs  write_batch.rs
crates/anchored-leveldb/src/all_errors/: aliases.rs  impls.rs  mod.rs  types.rs
crates/anchored-leveldb/src/binary_block_log/: block_size.rs  mod.rs  reader.rs  slices.rs  writer.rs
crates/anchored-leveldb/src/compaction/: compaction_pointer.rs  flush_memtable.rs  mod.rs
crates/anchored-leveldb/src/compactor/: blocking_handle.rs  cloneable_blocking_handle.rs  compactor_impl.rs  handle_creator.rs  mod.rs  mpsc_handle.rs
crates/anchored-leveldb/src/comparator/: default.rs  dyn_impls.rs
crates/anchored-leveldb/src/compression/: codec_list.rs  codec_trait.rs  google_leveldb_codecs.rs  mod.rs  mojang_leveldb_codecs.rs  no_compression_impl.rs  raw_snap_impl.rs  zlib_impl.rs
crates/anchored-leveldb/src/compressors/: compressor_list.rs  mod.rs
crates/anchored-leveldb/src/container/: arc.rs  mod.rs  rc.rs
crates/anchored-leveldb/src/contention_queue/: ad_hoc_variance_family_trait.rs  mod.rs  queue.rs  task.rs
crates/anchored-leveldb/src/file_tracking/: file_metadata.rs  level.rs  mod.rs  sorted_files.rs
crates/anchored-leveldb/src/filesystem/: memory.rs  mod.rs  posix.rs
crates/anchored-leveldb/src/filter/: bloom.rs  dyn_impls.rs  internal.rs  mod.rs
crates/anchored-leveldb/src/generic_leveldb/: mod.rs
crates/anchored-leveldb/src/inner_leveldb/: builder.rs  db_data.rs  db_shared_access.rs  fs_guard.rs  generic_db.rs  mod.rs
crates/anchored-leveldb/src/internal_iters/: compaction_input_iter.rs  file_iter.rs  internal_db_iter.rs  iter_to_merge.rs  level_iter.rs  linear_merging_iter.rs  mod.rs
crates/anchored-leveldb/src/internal_leveldb/: builder.rs  close_status.rs  compaction.rs  compactor.rs  construct.rs  construct_destruct.rs  debug_and_stats.rs  destruct.rs  mod.rs  next_file_number.rs  other_read_write.rs  put_delete_get.rs  state.rs  utils.rs
crates/anchored-leveldb/src/iter/: entries.rs  keys.rs  lending_iterator_impls.rs  mod.rs  pooled_entries.rs  pooled_keys.rs
crates/anchored-leveldb/src/leveldb/: generic_variants.rs  mod.rs
crates/anchored-leveldb/src/logger/: dyn_impls.rs  file_logger.rs  log_crate_logger.rs  log_file_ctor.rs  mod.rs  stderr_logger.rs  threadsafe_file_logger.rs
crates/anchored-leveldb/src/memtable/: format.rs  iter.rs  memtable_struct.rs  mod.rs  pool.rs  skiplists.rs
crates/anchored-leveldb/src/options/: dynamic_options.rs  internal_options.rs  mod.rs  open_options.rs  pub_options.rs
crates/anchored-leveldb/src/pub_leveldb/: construct.rs  debug_and_stats.rs  destroy.rs  destruct.rs  into_inner.rs  mod.rs  other_read_write.rs  structs.rs  utils.rs
crates/anchored-leveldb/src/pub_traits/: mod.rs
crates/anchored-leveldb/src/pub_typed_bytes/: block_handle.rs  enums.rs  file_number.rs  level.rs  log_size.rs  min_u32_usize.rs  mod.rs  offsets.rs  prefixed_bytes.rs  sequence_number.rs  short_slice.rs  simple_newtypes.rs  table_entry.rs  write_batch.rs
crates/anchored-leveldb/src/sstable/: block_builder.rs  block_iter.rs  builder.rs  data_block.rs  file_format.rs  filter_block.rs  footer.rs  index_block.rs  iter.rs  metaindex_block.rs  mod.rs  reader.rs
crates/anchored-leveldb/src/table_file/: build_table.rs  mod.rs  read_table.rs
crates/anchored-leveldb/src/table_traits/: adapters.rs  implementors.rs  mod.rs  trait_equivalents.rs
crates/anchored-leveldb/src/typed_bytes/: compaction_pointer.rs  enums.rs  internal_key.rs  mod.rs  user.rs  (+1 more)
crates/anchored-pool/: Cargo.toml  README.md
crates/anchored-pool/src/: bounded.rs  buffer_pools.rs  lib.rs  other_utils.rs  pooled_resource.rs  shared_bounded.rs  shared_unbounded.rs  unbounded.rs
crates/anchored-skiplist/: Cargo.toml
crates/anchored-skiplist/src/: default_comparator.rs  interface.rs  iter_defaults.rs  lib.rs  maybe_loom.rs  node_heights.rs
crates/anchored-skiplist/tests/: concurrent.rs  multithreaded_test.rs  simple.rs  threadsafe.rs
crates/anchored-sstable/: Cargo.toml
crates/anchored-sstable/src/: error.rs  filter_block.rs  internal_utils.rs  lib.rs  option_structs.rs  pool.rs  utils.rs  varint_utils.rs
crates/anchored-sync/: Cargo.toml  README.md
crates/anchored-sync/src/: lib.rs  maybe_sync.rs  would_block_error.rs
crates/anchored-vfs/: Cargo.toml
crates/anchored-vfs/src/: error.rs  fs_traits.rs  lib.rs  util_traits.rs
crates/generic-container/: Cargo.toml
crates/generic-container/src/: lib.rs
other-benchmarks/bench-rusty-leveldb/: Cargo.toml
other-benchmarks/bench-rusty-leveldb/src/: main.rs
(+217 files in other folders)
