[workspace]
resolver = "3"
members = ["crates/anchored-ldb-vfs", "crates/anchored-leveldb"]

[workspace.package]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
# TODO: check what the MSRV is

[workspace.dependencies]
anchored-ldb-vfs    = { version = "0.1.0", path = "crates/anchored-ldb-vfs" }
anchored-leveldb    = { version = "0.1.0", path = "crates/anchored-leveldb" }

cfg-if              = "1.0.1"
dyn-clone           = "1.0.19"
fs4                 = "0.13.1"
# I needed a hashbrown feature which, as of Rust 1.87, is only exposed in std's HashMap in nightly.
# (Internally, std uses hashbrown, so normally this dependency is unnecessary.)
hashbrown           = "0.15.4"
lender              = "0.3.2"
lending-iterator    = "0.1.7"
normalize-path      = "0.2.1"
log                 = "0.4.27"
serde               = "1.0.219"
sorted_vector_map   = "0.2.0"
void                = "1.0.2"


# Most of these lints are copied from egui's repo, or valence's repo
[workspace.lints.rust]
ambiguous_negative_literals          = "warn"
deref-into-dyn-supertrait            = "warn"
elided_lifetimes_in_paths            = "warn"
explicit_outlives_requirements       = "warn"
missing_debug_implementations        = "warn"
rust_2021_prelude_collisions         = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts                = "warn"
unexpected_cfgs                      = "warn"
unnameable_types                     = "warn"
unreachable_pub                      = "warn"
unsafe_code                          = "warn"
unsafe_op_in_unsafe_fn               = "warn"
unused_extern_crates                 = "warn"
unused_import_braces                 = "warn"
unused_lifetimes                     = "warn"

future_incompatible                  = { level = "warn", priority = -1 }
nonstandard_style                    = { level = "warn", priority = -1 }
rust_2018_idioms                     = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# See clippy.toml as well

# Defaults
correctness = "deny"

suspicious  = "warn"
style       = "warn"
complexity  = "warn"
perf        = "warn"

# Extras
pedantic    = "warn"
restriction = "warn"
nursery     = "warn"
cargo       = "warn"

# Exceptions
from_str_radix_10 = "allow"
let_with_type_underscore = "allow"
manual_range_contains = "allow"
map_unwrap_or = "allow"
unwrap_or_default = "allow"


# TODO: enable this
missing_errors_doc = "allow"
# TODO: warn about presence of `todo!()`
todo = "allow"
