[package]
name         = "bench-rusty-leveldb"
authors      = ["Finley Huggins"]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
repository   = "https://github.com/robofinch/anchored-leveldb"
license      = "MIT OR Apache-2.0"

[dependencies]
crc32c        = "0.6.8"
flate2        = { version = "1.1.5", default-features = false, features = ["zlib-rs"] }
rusty-leveldb = "4.0.1"

[profile.release]
lto = true
