[package]
name         = "anchored-leveldb"
authors      = ["Finley Huggins"]
description  = "Reimplementation of LevelDB, exposing a convenient and performant interface"
# TODO: make a crate-specific README
readme       = "../../README.md"
keywords     = ["leveldb", "database"]
categories   = ["database", "database-implementations"]
include      = ["Cargo.toml", "**/*.rs", "../../LICENSE-APACHE", "../../LICENSE-MIT"]
version      = "0.1.0"
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true


[dependencies]
anchored-pool       = { workspace = true, features = ["clone-behavior"] }
anchored-skiplist   .workspace = true
anchored-sstable    .workspace = true
anchored-vfs        .workspace = true

bijective-enum-map  .workspace = true
clone-behavior      .workspace = true
new-clone-behavior  .workspace = true
crc32c              .workspace = true
flate2              = { version = "1.1.5", default-features = false, features = ["zlib-rs"] }
generic-container   = { workspace = true, features = ["kinds"] }
integer-encoding    .workspace = true
mini-moka           = { workspace = true, default-features = false, optional = true }
# moka                = { workspace = true, features = ["sync"], optional = true }
oorandom            .workspace = true
seekable-iterator   = { workspace = true, features = ["alloc"] }
thiserror           .workspace = true
tracing             .workspace = true


[features]
# moka-caches         = ["anchored-sstable/moka-caches"]
moka-caches         = ["anchored-sstable/moka-caches", "dep:mini-moka"]
# quick-caches        = ["anchored-sstable/quick-caches"]

snappy-compressor   = ["anchored-sstable/snappy-compressor"]
zstd-compressor     = ["anchored-sstable/zstd-compressor"]

# Via `anchored-sstable`, we depend on getrandom 0.2.x and getrandom 0.3.x
wasm-js             = ["anchored-sstable/wasm-js"]

polonius            = []
