[package]
name         = "anchored-leveldb"
authors      = ["Finley Huggins"]
description  = "Reimplementation of LevelDB, exposing a convenient and performant interface"
# TODO: make a crate-specific README
readme       = "../../README.md"
keywords     = ["leveldb", "database"]
categories   = ["database", "database-implementations"]
include      = ["Cargo.toml", "**/*.rs", "../../LICENSE-APACHE", "../../LICENSE-MIT"]
version      = "0.1.0"
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true


[dependencies]
anchored-pool       = { workspace = true, features = ["clone-behavior"] }
anchored-skiplist   .workspace = true
anchored-vfs        .workspace = true

bijective-enum-map  .workspace = true
clone-behavior      = { workspace = true, features = ["alloc"] }
crc32c              .workspace = true
generic-container   .workspace = true
oorandom            .workspace = true
thiserror           .workspace = true
tracing             .workspace = true


[features]
snappy-compressor   = []
zstd-compressor     = []
zlib-compressor     = []

# We depend on getrandom 0.2.x and getrandom 0.3.x
wasm-js             = []

polonius            = []
