[package]
name         = "anchored-leveldb"
authors      = ["Finley Huggins"]
description  = "Reimplementation of LevelDB, exposing a convenient and performant interface"
# TODO: make a crate-specific README
readme       = "../../README.md"
keywords     = ["leveldb", "database"]
categories   = ["database", "database-implementations"]
include      = ["Cargo.toml", "**/*.rs", "../../LICENSE-APACHE", "../../LICENSE-MIT"]
version      = "0.0.1-alpha"
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true


[dependencies]
anchored-pool       = { workspace = true, features = ["clone-behavior"] }
anchored-skiplist   .workspace = true
anchored-vfs        .workspace = true

bijective-enum-map  .workspace = true
clone-behavior      = { workspace = true, features = ["alloc"] }
crc32c              .workspace = true
generic-container   .workspace = true
getrandom           = { workspace = true, default-features = false, optional = true }
kanal               .workspace = true
oorandom            .workspace = true
quick_cache         .workspace = true
snap                = { workspace = true, optional = true }
tracing             .workspace = true
variance-family     .workspace = true
zlib-rs             = { workspace = true, optional = true }
zstd-safe           = { workspace = true, default-features = false, optional = true }


[features]
# Snappy compression via `snap`.
snappy-compression              = ["dep:snap"]
# Zstandard (or "Zstd") compression via bindings.
zstd-compression                = ["dep:zstd-safe"]
# Uses Zstd features that are considered experimental (and require static linking).
#
# (This implementation is roughly what Google's leveldb uses, though for maximum flexibility, the
# `google-leveldb-compression` feature only enables the non-experimental `zstd-compression` flag.)
zstd-experimental-compression   = ["zstd-compression", "zstd-safe/experimental"]
# Zlib compression with `zlib-rs`.
zlib-compression                = ["dep:zlib-rs"]

google-leveldb-compression      = ["snappy-compression", "zstd-compression"]
mojang-leveldb-compression      = ["zlib-compression"]

# We depend on getrandom 0.3.x via quick_cache
wasm-js                         = ["getrandom/wasm_js"]

polonius                        = []
