[package]
name         = "anchored-pool"
authors      = ["Finley Huggins"]
description  = "Bounded and unbounded pools for generic resources or buffers"
readme       = "README.md"
keywords     = ["buffer", "pool"]
categories   = ["memory-management"]
include      = ["Cargo.toml", "**/*.rs", "../../LICENSE-APACHE", "../../LICENSE-MIT"]
version      = "0.1.0"
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[lints]
workspace = true


[dependencies]
clone-behavior = { workspace = true, optional = true }
