[package]
name         = "anchored-pool"
authors      = ["Finley Huggins"]
description  = "Bounded and unbounded pools for generic resources or buffers"
readme       = "README.md"
keywords     = ["buffer", "pool"]
categories   = ["memory-management"]
include      = ["Cargo.toml", "**/*.rs", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
version      = "0.1.0"
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true


[dependencies]
cfg-if              .workspace = true
clone-behavior      = { workspace = true, optional = true }
kanal               = { workspace = true, optional = true }
crossbeam-channel   = { workspace = true, optional = true }

[features]
default = ["kanal"]
