[package]
name         = "anchored-skiplist"
authors      = ["Finley Huggins"]
description  = "Performant skiplists, built for anchored-leveldb"
# TODO: make a crate-specific README
readme       = "../../README.md"
keywords     = ["skiplist", "sorted", "performant"]
categories   = ["data-structures", "concurrency"]
include      = ["Cargo.toml", "**/*.rs", "../../LICENSE-APACHE", "../../LICENSE-MIT"]
version      = "0.1.0"
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true


[dependencies]
aliasable           .workspace = true
bumpalo             .workspace = true
bumpalo-herd        .workspace = true
clone-behavior      .workspace = true
oorandom            .workspace = true
rustversion         .workspace = true
seekable-iterator   .workspace = true
# TODO: update this to yoke 0.8.1 or 0.9.0 when they come out
yoke                = { git = "https://github.com/unicode-org/icu4x.git", features = ["derive"] }

[target.'cfg(skiplist_loom)'.dependencies]
loom                .workspace = true
stable_deref_trait  .workspace = true

[dev-dependencies]
generic-container   .workspace = true

# TODO: document features
[features]
