[package]
name         = "anchored-skiplist"
authors      = ["Finley Huggins"]
description  = "Performant skiplists, built for anchored-leveldb"
# TODO: make a crate-specific README
readme       = "../../README.md"
keywords     = ["skiplist", "sorted", "performant"]
categories   = ["data-structures", "concurrency"]
include      = ["Cargo.toml", "**/*.rs", "../../LICENSE-APACHE", "../../LICENSE-MIT"]
version      = "0.0.1-alpha"
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true


[dependencies]
bumpalo             .workspace = true
clone-behavior      .workspace = true
oorandom            .workspace = true
variance-family     = { workspace = true, default-features = false }

# [target.'cfg(skiplist_loom)'.dependencies]
# loom                .workspace = true

# TODO: document features
[features]
