[package]
name         = "anchored-sync"
authors      = ["Finley Huggins"]
description  = "Enables libraries that support but do not require multithreading to provide greater performance for single-threaded uses"
readme       = "README.md"
keywords     = ["sync", "atomic", "arc", "rc", "reference-counting"]
categories   = ["rust-patterns", "memory-management", "no-std"]
include      = ["Cargo.toml", "**/*.rs", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
version      = "0.1.0"
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true


[dependencies]
clone-behavior = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

[features]
default = ["std"]
# Enables `MaybeSyncMutex` and `MaybeSyncRwLock`
std = []
# Uses `parking_lot`'s `Mutex` and `RwLock`
parking_lot = ["std", "dep:parking_lot"]
# Lastly, there's an implicit `clone-behavior` feature.
